examples/test/testpolicy14119.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14119
  namespace: namespace71
spec:
  podSelector:
    matchLabels:
      key2: value37
      key19: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value48
          key22: value12
      podSelector:
        matchLabels:
          key10: value6
